# cpp-project-template

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt
